@@ -1,3 +1,14 @@
+2007-05-18  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-04-11
+	* fix potential dead-lock, avoid call to WebGUI::lockInfoSpaces()
+	* add parameter 'firstEvent', specifying the number assigned to
+	the first event in RANDOM mode.
+	* add Monitor applications to all executives, add another
+	executive for a collection Monitor (port 40003), and have flash
+	lists generated by scripts/initialize. The Monitor collector needs
+	to be activated over the webpage.
+
 2007-04-27  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-04-10
